[package]
name = "neo-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Blockchain state machine and chain management for Neo N3"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Data structures
hashbrown = { workspace = true }
parking_lot = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Internal dependencies
# NOTE: neo-config removed - configuration should be injected, not imported
# This maintains proper layering: neo-chain (Layer 3) should not depend on neo-config (Layer 4)
neo-primitives = { path = "../neo-primitives" }
neo-mempool = { path = "../neo-mempool" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }

[features]
default = []
