[package]
name = "neo-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line interface for interacting with the Neo Rust node"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
neo-node = { path = "../neo-node" }
neo-base = { path = "../neo-base", default-features = false, features = ["derive", "std"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

