[package]
name = "neo-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Configuration management for Neo N3 blockchain node"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
dirs = "5.0"
thiserror = { workspace = true }
