[package]
name = "neo-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Configuration management for Neo N3 blockchain node"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
dirs = "5.0"
thiserror = { workspace = true }
# Canonical typed ProtocolSettings + HardforkManager live here (moved from neo-core)
neo-primitives = { workspace = true }
neo-crypto = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
