[package]
name = "neo-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Configuration management for Neo N3 blockchain node"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Canonical chain specification, ProtocolSettings, and hardfork schedule.
neo-primitives = { workspace = true }
neo-error = { workspace = true }
neo-crypto = { workspace = true }

[lints]
workspace = true
