[package]
name = "neo-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Contract execution helpers for the Neo N3 Rust node"

[features]
default = ["std"]
std = [
    "neo-base/std",
    "neo-crypto/std",
]

[dependencies]
neo-base = { path = "../neo-base", default-features = false, features = ["derive"] }
neo-crypto = { path = "../neo-crypto", default-features = false, features = ["std"] }
neo-store = { path = "../neo-store" }
neo-core = { path = "../neo-core", features = ["std"] }
neo-vm = { path = "../neo-vm" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
dashmap = "5.5"
hex = { version = "0.4", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

[workspace]
