[package]
name = "neo-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Smart contract execution engine for Neo blockchain"

[dependencies]
# Internal crates
neo-primitives = { workspace = true }
neo-crypto = { workspace = true }
neo-storage = { workspace = true }
neo-vm = { workspace = true }
neo-io = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Numeric types
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bitflags = "2.4"

[dev-dependencies]

[features]
default = []
