[package]
name = "neo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Core functionality for Neo blockchain"

[dependencies]
# External dependencies
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
thiserror = "1.0"
derive_more = "0.99"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
byteorder = "1.4"
bytes = "1.4"
log = "0.4"
# tokio kept for monitoring and persistence/backup modules
# Consider moving these to neo-node in future refactoring
tokio = { version = "1.28", features = ["sync", "time", "fs", "io-util", "rt"] }
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
blake2 = "0.10"
bs58 = "0.5"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
p256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blst = "0.3"
once_cell = "1.19"
tracing = "0.1"
prometheus = "0.13"
sysinfo = "0.29"
reqwest = { version = "0.11", features = ["json", "blocking"] }
quick-xml = { version = "0.31", features = ["serialize"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
murmur3 = "0.5"
rocksdb.workspace = true
url = "2.4"
bincode = "1.3"
scrypt = "0.11"
parking_lot = "0.12"
lz4_flex.workspace = true
if-addrs = "0.10"
bitflags = "2.4"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Actor framework removed (Phase 2 refactoring)
# ractor.workspace = true - moved to neo-node

# Internal dependencies
chrono.workspace = true
futures.workspace = true
neo-vm = { path = "../neo-vm" }
# neo-akka merged into neo-core/src/akka/ - no longer an external dependency
neo_io_crate = { path = "../neo-io", package = "neo-io" }
inventory = "0.3"

# New foundation crates (re-exported for backward compatibility)
# Foundation layer dependencies only (Layer 0)
# NOTE: neo-p2p and neo-consensus removed to fix layering violation
# neo-core is Layer 1, should not depend on Layer 2 protocol crates
neo-primitives = { path = "../neo-primitives" }
neo-crypto = { path = "../neo-crypto" }
neo-storage = { path = "../neo-storage" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.5"

[features]
monitoring = []
performance-tests = []
