[package]
name = "neo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Core functionality for Neo blockchain"
build = "build.rs"

[dependencies]
# External dependencies
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = "0.1"
thiserror = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
byteorder = "1.4"
bytes = { workspace = true }
log = { workspace = true }
# tokio kept for monitoring and persistence/backup modules
# Consider moving these to neo-node in future refactoring
tokio = { workspace = true, features = ["sync", "time", "fs", "io-util", "rt"] }
async-trait = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
# sha3, blake2 removed - use neo-crypto instead
ripemd = { workspace = true }
bs58 = { workspace = true }
# secp256k1, ed25519-dalek removed - use neo-crypto instead
p256 = { workspace = true }
k256 = { workspace = true }
blst = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tonic = { version = "0.11", features = ["transport", "tls", "tls-roots"], optional = true }
prost = { version = "0.12", optional = true }
quick-xml = { version = "0.31", features = ["serialize"], optional = true }
uuid = { workspace = true }
base64 = { workspace = true }
hmac = "0.12"
murmur3 = "0.5"
zstd = "0.13"
rocksdb = { workspace = true, optional = true }
url = { workspace = true }
percent-encoding = "2.3"
bincode = { workspace = true }
scrypt = "0.11"
parking_lot = { workspace = true }
lz4_flex = { workspace = true }
if-addrs = "0.10"
bitflags = "2.4"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
zeroize = { workspace = true }
subtle = "2.5"

# Actor framework removed (Phase 2 refactoring)
ractor = { workspace = true, optional = true }

# Parallel processing for bulk sync
rayon = { version = "1.10", optional = true }

# Internal dependencies
chrono.workspace = true
futures.workspace = true
neo-vm = { path = "../neo-vm" }
# neo-akka merged into neo-core/src/akka/ - no longer an external dependency
neo_io_crate = { path = "../neo-io", package = "neo-io" }
inventory = "0.3"
neo-json = { path = "../neo-json" }

# New foundation crates (re-exported for backward compatibility)
# Foundation layer dependencies only (Layer 0)
# NOTE: neo-p2p and neo-consensus removed to fix layering violation
# neo-core is Layer 1, should not depend on Layer 2 protocol crates
neo-primitives = { path = "../neo-primitives" }
neo-crypto = { path = "../neo-crypto" }
neo-storage = { path = "../neo-storage" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
unicode-segmentation = "1.10"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# For cryptography tests that need direct secp256k1 access
secp256k1 = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"

[features]
default = []
# RocksDB storage provider - enable for production use
rocksdb = ["dep:rocksdb"]
# UPnP network discovery - requires reqwest
upnp = ["dep:reqwest", "dep:quick-xml"]
# Monitoring subsystem - requires prometheus, sysinfo, reqwest
monitoring = ["dep:prometheus", "dep:sysinfo", "dep:reqwest"]
# Oracle service - requires reqwest
oracle = ["dep:reqwest"]
# NeoFS gRPC support (optional, for parity with C#)
neofs-grpc = ["dep:tonic", "dep:prost", "oracle"]
# Parallel processing for bulk sync
parallel = ["dep:rayon"]
# All optional features for full functionality
full = ["rocksdb", "upnp", "monitoring", "oracle", "neofs-grpc", "parallel"]
runtime = ["dep:ractor"]
performance-tests = []
