[package]
name = "neo-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Cryptographic utilities for Neo blockchain (hashing, ECC, signatures)"

[dependencies]
# Internal crates
neo-primitives = { workspace = true }

# Hashing
sha2 = { workspace = true }
sha3 = { workspace = true }
ripemd = { workspace = true }
blake2 = { workspace = true }

# Elliptic curve cryptography
p256 = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }

# Encoding
hex = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Constant-time operations and secure memory handling
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]

[features]
default = []
