[package]
name = "neo-event-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Typed event handler traits for the Neo runtime (committed/committing/wallet-changed/message-received)"

[dependencies]
neo-primitives = { workspace = true }
neo-payloads = { workspace = true }
neo-ledger-types = { workspace = true }
neo-block = { workspace = true }
neo-storage = { workspace = true }
