[package]
name = "neo-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Typed event payloads and broadcast helpers for the Neo runtime (plugin events, block/transaction lifecycle)"

[dependencies]
# Foundation layer
neo-primitives = { workspace = true }
neo-ledger-types = { workspace = true }

# External
tracing = { workspace = true }
