[package]
name = "neo-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Neo smart-contract execution engine (ApplicationEngine), interop services, and storage/iterator helpers"

[dependencies]
# Foundation / VM layer
neo-primitives = { workspace = true }
neo-error = { workspace = true }
neo-io = { workspace = true }
neo-crypto = { workspace = true }
neo-vm = { workspace = true }
neo-vm-rs = { workspace = true }
neo-config = { workspace = true }
neo-redeem-script = { workspace = true }
neo-script-builder = { workspace = true }
neo-data-cache = { workspace = true }
neo-storage = { workspace = true }
neo-manifest = { workspace = true }
neo-serialization = { workspace = true }
neo-block = { workspace = true }
neo-payloads = { workspace = true }
neo-ledger-types = { workspace = true }

# External
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = "0.1"
async-trait = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
once_cell = "1.19"
smallvec = { workspace = true }
bitflags = { workspace = true }
bitvec = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
bip39 = { workspace = true }
secp256k1 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ripemd = { workspace = true }
blake2 = { workspace = true }
bs58 = { workspace = true }
neo-services = { workspace = true }
neo-p2p = { workspace = true }
