[package]
name = "neo-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Neo smart-contract execution engine (ApplicationEngine), interop services, and storage/iterator helpers"

[dependencies]
# Foundation / VM layer
neo-primitives = { workspace = true }
neo-error = { workspace = true }
neo-io = { workspace = true }
neo-crypto = { workspace = true }
neo-vm = { workspace = true }
neo-vm-rs = { workspace = true }
neo-config = { workspace = true }
neo-storage = { workspace = true }
neo-manifest = { workspace = true }
neo-serialization = { workspace = true }
neo-payloads = { workspace = true }
neo-runtime = { workspace = true }

# External
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
async-trait = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
bitflags = { workspace = true }
bitvec = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
bip39 = { workspace = true }
secp256k1 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ripemd = { workspace = true }
blake2 = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
