[package]
name = "neo-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Neo smart-contract execution engine (ApplicationEngine), interop services, and storage/iterator helpers"

[dependencies]
# Foundation / VM layer
neo-primitives = { workspace = true }
neo-error = { workspace = true }
neo-io = { workspace = true }
neo-crypto = { workspace = true }
neo-vm = { workspace = true }
neo-config = { workspace = true }
neo-storage = { workspace = true }
neo-manifest = { workspace = true }
neo-serialization = { workspace = true }
neo-payloads = { workspace = true }
neo-runtime = { workspace = true }

# External
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
