[package]
name = "neo-extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Trait extensions that mirror the C# Neo.Extensions namespace (byte, span, memory, utility, error)"

[dependencies]
# Foundation layer
neo-primitives = { workspace = true }
neo-error = { workspace = true }
neo-io = { workspace = true }
neo-crypto = { workspace = true }

# External
parking_lot = { workspace = true }
