[package]
name = "neo-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Native desktop manager for the neo-rs Neo N3 node (status, wallet, network, contracts, plugins)"
license = "MIT"

[[bin]]
name = "neo-gui"
path = "src/main.rs"

[dependencies]
# Native immediate-mode GUI (OpenGL/glow renderer).
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_extras = "0.29"
egui_plot = "0.29"

# JSON-RPC over HTTP to the running node (no node-internal deps — the GUI is a
# pure client, exactly like nexus manages a node externally).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Local node process control + host metrics.
sysinfo = "0.32"

# Logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
