[package]
name = "neo-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Read-side indexer service for Neo N3 blocks, transactions, and accounts"

[dependencies]
base64 = { workspace = true }
neo-error = { workspace = true }
neo-payloads = { workspace = true }
neo-primitives = { workspace = true }
neo-storage = { workspace = true }
neo-vm = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
neo-vm-rs = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
