[package]
name = "neo-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "IO operations and data structures for the Neo blockchain"

[dependencies]
# External dependencies
bytes = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
lru = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
indexmap = "2.0"
linked-hash-map = "0.5"
tracing = { workspace = true, optional = true }

# Internal dependencies
# neo-primitives is a Layer 0 crate with no neo-* dependencies
neo-primitives = { path = "../neo-primitives" }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
