[package]
name = "neo-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "IO operations and data structures for the Neo blockchain"

[dependencies]
# External dependencies
bytes = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true, optional = true }

# Encoding
hex = { workspace = true }

# Compression
lz4_flex = { workspace = true }

# Internal dependencies
# neo-primitives is a Layer 0 crate with no neo-* dependencies
neo-primitives = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
