[package]
name = "neo-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "JSON types and utilities for Neo blockchain (matches C# Neo.Json)"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "neo_json"
path = "src/lib.rs" 